Added Different Heading, Bullet Points, and Attempted re-sizing image.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
         <title>About Andrew Germain</title>
     </head>
     <body>
-        <img src="five-dollar-memorial.JPG"
+        <h1 class="center">About Andrew Germain</h1>
+        <div>
+            <h2>Drew's Daily Do's</h2>
+            <ul>
+                <li>FPS Gamer</li>
+                <li>Loves Music</li>
+                <li>Lover of Boards</li>
+                <li>Loves Outdoors</li>
+                <li>Aspiring Cook</li>
+                <li>Loves ABQ NM</li>
+            </ul>
+        </div>
+        <p>*Insert Joke Here*</p>
+        <img class="center" src="five-dollar-memorial.JPG"
              alt="Andrew In Front of Lincoln Memorial"/>
-
-    <p>FPS Gamer</p>
-    <p>Loves music</p>
-    <p>Lover of boards</p>
-    <p>Tattoo Journey</p>
-    <p>Loves Out Doors</p>
-    <p>Aspiring Cook</p>
-    <p>Actually Loves ABQ NM</p>
-    <p>Was In Albuquerque Boys Choir</p>
     </body>
 
 
