Added Different Heading, Bullet Points, and Attempted re-sizing image.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>About Andrew Germain</title>
+        <title class="center">About Andrew Germain</title>
     </head>
     <body>
         <h1 class="center">About Andrew Germain</h1>
