Andrew's about me changes

--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8"/>
+        <meta charset="UTF-8"/>
         <title class="center">About Andrew Germain</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <h1 class="center">About Andrew Germain</h1>
-        <div>
-            <h2>Drew's Daily Do's</h2>
-            <ul>
-                <li>FPS Gamer</li>
-                <li>Loves Music</li>
-                <li>Lover of Boards</li>
-                <li>Loves Outdoors</li>
-                <li>Aspiring Cook</li>
-                <li>Loves ABQ NM</li>
-            </ul>
+        <h2 class="center">Drew's Daily Do's</h2>
+        <div class="center">
+            <p>FPS Gamer</p>
+            <p>Loves Music</p>
+            <p>Loves Stilts</p>
+            <p>Lover Boards</p>
+            <p>Loves Outdoors</p>
+            <p>Aspiring Cook</p>
+            <p>Loves ABQ NM</p>
         </div>
-        <p>*Insert Joke Here*</p>
-        <img class="center" src="five-dollar-memorial.JPG"
+        <div class="center">
+            <p>I have a pet chocobo.</p>
+            <p>I am a profession stilt back-flipper.</p>
+            <p>I once climbed Mt. Kilimanjaro on crutches.</p>
+        </div>
+        <img class="center-image" src="five-dollar-memorial.JPG"
              alt="Andrew In Front of Lincoln Memorial"/>
     </body>
-
-
-
 </html>
